added comments on code functionality, fixed blog post not-displaying error, added styling for blog posts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="header">
+        <p>Welcome to my Blog!</p>
+    </div>
+    
     <div class="toggle-container">
         <label class="light-mode">🌞</label>
         <label class="switch">
